Support for defined assurance types

--- a/extension/extension.yaml
+++ b/extension/extension.yaml
@@ -1,5 +1,5 @@
 name: auth-iproov
-version: 0.1.1
+version: 0.2.0
 specVersion: v1beta
 displayName: Authenticate with iProov
 description: >-
@@ -75,3 +75,15 @@ params:
     description: >-
       Your iProov API secret. Leave blank to use the sandbox environment.
     type: secret
+  - param: ASSURANCE_TYPES
+    label: iProov Assurance Type(s)
+    required: true
+    description: >-
+      The iProov assurance type(s) to allow for the iProov face scan.
+      Note that if you select more than one assurance type, they can be used interchangeably without any restriction.
+    type: multiSelect
+    options:
+      - label: Dynamic Liveness
+        value: genuine_presence
+      - label: Express Liveness
+        value: liveness
