--- a/sdk/flutter/pubspec.yaml
+++ b/sdk/flutter/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   # Firebase
   firebase_auth: ^4.16.0
   cloud_functions: ^4.5.8
+  mockito: ^5.4.4
 
 dev_dependencies:
   flutter_test:
