iOS SDK: Added support for privacy policy, fixed issues where IProovFailure & IProovProgress weren't public, upgraded Example app

--- a/sdk/ios/Example/Podfile
+++ b/sdk/ios/Example/Podfile
@@ -4,6 +4,7 @@ platform :ios, '12.0'
 
 target 'iProovFirebase_Example' do
   pod 'iProovFirebase', :path => '../'
+  pod 'SVProgressHUD'
 
   target 'iProovFirebase_Tests' do
     inherit! :search_paths
