Updated ToS param

--- a/extension/extension.yaml
+++ b/extension/extension.yaml
@@ -88,13 +88,15 @@ params:
       Your iProov API secret. Leave blank to use the sandbox environment.
     type: secret
   - param: ACCEPTED_TOS
-    label: Accepted Terms of Service
+    label: I have read and I acknowledge and accept the iProov Firebase Extension Terms of Use, Data Processing Addendum and Acceptable Use Policy
     required: true
     description: >-
-      I have read and accept the iProov Firebase Extension Terms of Service at https://iproov.com/firebase/terms.
+      Terms of Use: https://www.iproov.com/app-policies/firebase/terms-of-use<br><br>
+      Acceptable Use Policy: https://www.iproov.com/app-policies/firebase/acceptable-use-policy<br><br>
+      Data Processing Addendum: https://www.iproov.com/app-policies/firebase/data-processing-addendum 
     type: select
     options:
-      - label: Agree
+      - label: I agree
         value: true
-      - label: Disagree
+      - label: I disagree
         value: false
